--- a/style.css
+++ b/style.css
@@ -5,8 +5,33 @@
 .header
 {
 min-height:100vh;
-background-color: #512E5F;}
+width:100;
+background-image:linear-gradient(rgba(4,9,30,0.2),rgba(4,9,30,0.5)),url("homebg.jpg");
+background-position:center;
+background-size:cover;
+position:relative;
+
+}
+form{
+background-color:#fff;
+width:500px;
+height:44px;
+border-radius:5px;
+display:flex;
+flex-direction:row;
+align-items:center;
+}
+
+input{
+all:unset;
+font:16px system-ui;
+color:#000;
+height:100%;
+width:100%;
+padding:6px 10px;
+}
 .text-box
+
 {
 width:80%;
 color:#ffffff;
@@ -21,7 +46,7 @@ font-size:50px;
 }
 nav{
   width: 100%;
-  padding: 30px 0;
+  padding: 50px 0;
 }
 nav .menu{
   max-width:1250px;
@@ -57,3 +82,17 @@ nav .menu{
   background: #fff;
   color: black;
 }
+button {
+  background-color:#dcd0ff;
+  color:#000;
+  padding: 14px 100px;
+  margin: 8px 0;
+  border: none;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+
+
